# LibGui

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  Main.cpp
LibGui/: CMakeLists.txt
LibGui/include/: LibGui.h
LibGui/libraries/include/glad/: glad.h
LibGui/libraries/lib/: glad.c
LibGui/src/: LibGui.cpp  LibGui.h
LibGui/src/Shaders/: DynamicTextFragment.frag  FragmentShader.frag  VertexShader.vert
